@@ -24,8 +24,8 @@ import org.junit.jupiter.api.Test;
 import org.laokou.common.core.utils.JacksonUtil;
 import org.laokou.common.core.utils.TemplateUtil;
 import org.laokou.common.i18n.utils.ResourceUtil;
-import org.laokou.generator.domain.Table;
-import org.laokou.generator.dto.GenerateCmd;
+import org.laokou.generator.domain.TableE;
+import org.laokou.generator.domain.TableV;
 import org.laokou.generator.repository.TableColumnDO;
 import org.laokou.generator.repository.TableDO;
 import org.laokou.generator.repository.TableMapper;
@@ -35,7 +35,6 @@ import org.springframework.test.context.TestConstructor;
 
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -55,31 +54,32 @@ class TableTest {
 
 	@Test
 	void testTable() {
-		List<TableDO> tables = tableMapper.selectTables(Collections.emptySet());
+		List<TableDO> tables = tableMapper.selectObjs(Set.of("boot_sys_user"));
 		log.info("获取表：{}", JacksonUtil.toJsonStr(tables));
 	}
 
 	@Test
 	void testTableColumn() {
-		List<TableColumnDO> tableColumns = tableMapper.selectTableColumns(Collections.emptySet());
+		List<TableColumnDO> tableColumns = tableMapper.selectColumns(Set.of("boot_sys_user"));
 		log.info("获取字段：{}", JacksonUtil.toJsonStr(tableColumns));
 	}
 
 	@Test
 	void testClass() {
-		GenerateCmd cmd = GenerateCmd.builder().tables(Set.of("boot_sys_user")).tablePrefix("boot_sys_").build();
-		Table table = tableService.findList(cmd).getFirst();
-		log.info("{}", JacksonUtil.toJsonStr(table));
-		Map<String, Object> map = JacksonUtil.toMap(table, String.class, Object.class);
+		TableE tableE = new TableE(Set.of("boot_sys_menu"), "boot_sys_");
+		TableV tableV = tableService.list(tableE).getFirst();
+		String str = JacksonUtil.toJsonStr(tableV);
+		log.info("{}", str);
+		Map<String, Object> map = JacksonUtil.toMap(tableV, String.class, Object.class);
 		map.put("packageName", "org.laokou");
 		map.put("moduleName", "iot");
+		map.put("author", "laokou");
 		log.info("{}", getContent(map));
 	}
 
 	@SneakyThrows
 	private String getContent(Map<String, Object> map) {
-		try (InputStream inputStream = ResourceUtil.getResource("templates/do.ftl")
-			.getInputStream()) {
+		try (InputStream inputStream = ResourceUtil.getResource("templates/do.ftl").getInputStream()) {
 			byte[] bytes = inputStream.readAllBytes();
 			String template = new String(bytes, StandardCharsets.UTF_8);
 			return TemplateUtil.getContent(template, map);
